--- a/code/templates/blog.html
+++ b/code/templates/blog.html
@@ -308,10 +308,10 @@
                                     <button type="submit" class="s_btn">Send</button>
                                 </form>
                                 <ul class="list-unstyled f_social_icon">
-                                    <li><a href="#"><i class="social_facebook"></i></a></li>
-                                    <li><a href="#"><i class="social_twitter"></i></a></li>
-                                    <li><a href="#"><i class="social_vimeo"></i></a></li>
-                                    <li><a href="#"><i class="social_linkedin"></i></a></li>
+                                    <li><a href="https://www.facebook.com/"><i class="social_facebook"></i></a></li>
+                                    <li><a href="https://www.x.com/"><i class="social_twitter"></i></a></li>
+                                    <li><a href="https://vimeo.com/"><i class="social_vimeo"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/"><i class="social_linkedin"></i></a></li>
                                 </ul>
                             </div>
                         </div>
