--- a/code/templates/contact.html
+++ b/code/templates/contact.html
@@ -308,17 +308,17 @@
                 <div class="row">
                     <div class="col-lg-4 col-sm-6">
                         <div class="f_widget subscribe_widget wow fadeInUp">
-                            <a href="index.html" class="f_logo"><img src="../static/img/logo.png" alt=""></a>
+                            <a href="/index" class="f_logo"><img src="../static/img/logo.png" alt=""></a>
                             <h4 class="c_head">Subscribe to our newsletter</h4>
                             <form action="#" class="footer_subscribe_form">
                                 <input type="email" placeholder="Email" class="form-control">
                                 <button type="submit" class="s_btn">Send</button>
                             </form>
                             <ul class="list-unstyled f_social_icon">
-                                <li><a href="#"><i class="social_facebook"></i></a></li>
-                                <li><a href="#"><i class="social_twitter"></i></a></li>
-                                <li><a href="#"><i class="social_vimeo"></i></a></li>
-                                <li><a href="#"><i class="social_linkedin"></i></a></li>
+                                <li><a href="https://www.facebook.com/"><i class="social_facebook"></i></a></li>
+                                <li><a href="https://www.x.com/"><i class="social_twitter"></i></a></li>
+                                <li><a href="https://vimeo.com/"><i class="social_vimeo"></i></a></li>
+                                <li><a href="https://www.linkedin.com/"><i class="social_linkedin"></i></a></li>
                             </ul>
                         </div>
                     </div>
