--- a/code/templates/forum-single.html
+++ b/code/templates/forum-single.html
@@ -638,10 +638,10 @@ font-family: 'Dancing Script', cursive;
                                 <button type="submit" class="s_btn">Send</button>
                             </form>
                             <ul class="list-unstyled f_social_icon">
-                                <li><a href="#"><i class="social_facebook"></i></a></li>
-                                <li><a href="#"><i class="social_twitter"></i></a></li>
-                                <li><a href="#"><i class="social_vimeo"></i></a></li>
-                                <li><a href="#"><i class="social_linkedin"></i></a></li>
+                                <li><a href="https://www.facebook.com/"><i class="social_facebook"></i></a></li>
+                                <li><a href="https://www.x.com/"><i class="social_twitter"></i></a></li>
+                                <li><a href="https://vimeo.com/"><i class="social_vimeo"></i></a></li>
+                                <li><a href="https://www.linkedin.com/"><i class="social_linkedin"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -651,16 +651,16 @@ font-family: 'Dancing Script', cursive;
                         <div class="f_widget link_widget pl_70 wow fadeInUp" data-wow-delay="0.6s">
                             <h3 class="f_title">HerBlossom Pages</h3>
                             <ul class="list-unstyled link_list">
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="signin.html">Sign In</a></li>
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="forums.html">Forum</a></li>
-                                <li><a href="job-recommendation.html">Job Recommendation</a></li>
+                                <li><a href="/index">Home</a></li>
+                                <li><a href="/signin">Sign In</a></li>
+                                <li><a href="/blog">Blog</a></li>
+                                <li><a href="/forum">Forum</a></li>
+                                <li><a href="/job-recommendation">Job Recommendation</a></li>
 
-<!--                                <li><a href="changelog.html">Changelog</a></li>-->
-<!--                                <li><a href="Onepage.html">Onepage Docs</a></li>-->
-<!--                                <li><a href="#">Conversion Tracking</a></li>-->
-<!--                                <li><a href="cheatsheet.html">Cheatseet</a></li>-->
+                                <!--                                <li><a href="changelog.html">Changelog</a></li>-->
+                                <!--                                <li><a href="Onepage.html">Onepage Docs</a></li>-->
+                                <!--                                <li><a href="#">Conversion Tracking</a></li>-->
+                                <!--                                <li><a href="cheatsheet.html">Cheatseet</a></li>-->
                             </ul>
                         </div>
                     </div>
@@ -669,13 +669,13 @@ font-family: 'Dancing Script', cursive;
                         <div class="f_widget link_widget wow fadeInUp" data-wow-delay="0.4s">
                             <h3 class="f_title">Blog</h3>
                             <ul class="list-unstyled link_list">
-                                <li><a href="life-skills.html">Life Skills</a></li>
-                                <li><a href="physical-health.html">Physical Health</a></li>
-                                <li><a href="mental-health.html">Mental Health</a></li>
-                                <li><a href="tab.html">Tables</a></li>
-<!--                                <li><a href="#">Image Lightbox</a></li>-->
-<!--                                <li><a href="#">iOS & Android</a></li>-->
-<!--                                <li><a href="#">Messages</a></li>-->
+                                <li><a href="/blog">Blog</a></li>
+                                <li><a href="/blog-category/Skills">Life Skills</a></li>
+                                <li><a href="/blog-category/Health">Physical & Mental Health</a></li>
+                                <li><a href="/blog-category/Others">Others</a></li>
+                                <!--                                <li><a href="#">Image Lightbox</a></li>-->
+                                <!--                                <li><a href="#">iOS & Android</a></li>-->
+                                <!--                                <li><a href="#">Messages</a></li>-->
                             </ul>
                         </div>
                     </div>
@@ -685,11 +685,11 @@ font-family: 'Dancing Script', cursive;
                             <h3 class="f_title">Company</h3>
                             <ul class="list-unstyled link_list">
                                 <li><a href="/about-us">About Us</a></li>
-                                <li><a href="contact.html">Contact Us</a></li>
+                                <li><a href="/contact-us">Contact Us</a></li>
 
-<!--                                <li><a href="#">Careers</a></li>-->
-<!--                                <li><a href="#">HerBlossom for Good</a></li>-->
-<!--                                <li><a href="#">Contact Us</a></li>-->
+                                <!--                                <li><a href="#">Careers</a></li>-->
+                                <!--                                <li><a href="#">HerBlossom for Good</a></li>-->
+                                <!--                                <li><a href="#">Contact Us</a></li>-->
                             </ul>
                         </div>
                     </div>
