--- a/code/templates/Account.html
+++ b/code/templates/Account.html
@@ -802,7 +802,7 @@
             .then(data => {
                 if (data.message === 'Logged out successfully') {
                     // 登出成功，重定向到首页
-                    window.location.href = '/index';
+                    window.location.href = '/signin';
                 } else {
                     alert('Sign out failed. Please try again.');
                 }
