Update theme color and some templates

--- a/code/templates/post-edit.html
+++ b/code/templates/post-edit.html
@@ -26,9 +26,11 @@
                 <div class="spinner"></div>
                 <div class="text">
                     <img src="../static/img/spinner_logo.png" alt="">
-                    <h4><span>HerBloom</span></h4>
+                    <h4><span>Her</span>Blossom</h4>
                 </div>
             </div>
+            <h2 class="head">KNOWLEDGE EMPOWER YOU</h2>
+            <p>Power come from yourself. You get your back!</p>
         </div>
     </div>
 
