change css about job

--- a/code/templates/job-recommendation.html
+++ b/code/templates/job-recommendation.html
@@ -357,6 +357,7 @@ select.form-select:hover {
         border: 3px solid #f8c8dc; /* 浅粉色边框 */
         border-radius: 10px; /* 圆角 */
         margin-right: 10px;
+        margin-bottom: 12px;
     }
 
     .job-description li {
