--- a/code/templates/job-recommendation.html
+++ b/code/templates/job-recommendation.html
@@ -32,8 +32,8 @@
                     <h4><span>HerBlossom</span></h4>
                 </div>
             </div>
-            <h2 class="head">Did You Know?</h2>
-            <p></p>
+            <h2 class="head">CHEER UP GIRLS!</h2>
+            <p>We can solve problems together.</p>
         </div>
     </div>
 
