--- a/code/templates/post-edit.html
+++ b/code/templates/post-edit.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../static/assets/animation/animate.css">
     <link rel="stylesheet" href="../static/css_test/style.css">
     <link rel="stylesheet" href="../static/css_test/responsive.css">
-    <title>HerBloom - Edit Post</title>
+    <title>HerBlossom - Edit Post</title>
 </head>
 
 <body data-scroll-animation="true">
